bin/neam_c_api.h

/* ============================================================================
 * Opaque Handle Types
 * ============================================================================ */

/** @brief Opaque handle to a Neam runtime instance */
typedef struct NeamRuntime NeamRuntime;
/** @brief Opaque handle to an execution result */
typedef struct NeamResult NeamResult;
/** @brief Opaque handle to an error */
typedef struct NeamError NeamError;
/** @brief Opaque handle to an agent */
typedef struct NeamAgent NeamAgent;
/** @brief Opaque handle to a runner (agent loop) */
typedef struct NeamRunner NeamRunner;
/** @brief Opaque handle to a task */
typedef struct NeamTask NeamTask;
/* ============================================================================
 * Error Type Enumeration
 * ============================================================================ */

/**
 * @brief Enumeration of error types
 */
typedef enum NeamErrorType {
  NEAM_ERROR_NONE = 0,
  NEAM_ERROR_PARSE = 1,
  NEAM_ERROR_COMPILE = 2,
  NEAM_ERROR_RUNTIME = 3,
  NEAM_ERROR_TOOL = 4,
  NEAM_ERROR_TIMEOUT = 5,
  NEAM_ERROR_BUDGET = 6,
  NEAM_ERROR_AGENT = 7,
  NEAM_ERROR_MEMORY = 8,
  NEAM_ERROR_IO = 9,
  NEAM_ERROR_INVALID_ARGUMENT = 10
} NeamErrorType;
/* ============================================================================
 * Task Status Enumeration
 * ============================================================================ */

/**
 * @brief Enumeration of task statuses (A2A Protocol)
 */
typedef enum NeamTaskStatus {
  NEAM_TASK_PENDING = 0,
  NEAM_TASK_RUNNING = 1,
  NEAM_TASK_COMPLETED = 2,
  NEAM_TASK_FAILED = 3,
  NEAM_TASK_CANCELLED = 4
} NeamTaskStatus;
/* ============================================================================
 * Version Information
 * ============================================================================ */

/**
 * @brief Get the Neam runtime version string
 * @return Version string (e.g., "0.3.0")
 */
NEAM_API const char* neam_version(void);
/**
 * @brief Get the major version number
 * @return Major version
 */
NEAM_API int neam_version_major(void);
/**
 * @brief Get the minor version number
 * @return Minor version
 */
NEAM_API int neam_version_minor(void);
/**
 * @brief Get the patch version number
 * @return Patch version
 */
NEAM_API int neam_version_patch(void);
/* ============================================================================
 * Agent API
 * ============================================================================ */

/**
 * @brief Create a new agent
 *
 * @param runtime Runtime context
 * @param name Agent name
 * @param provider LLM provider ("ollama", "openai", etc.)
 * @param model Model name
 * @param system System prompt
 * @return Agent handle (caller takes ownership), or NULL on error
 */
NEAM_API NeamAgent* neam_agent_create(
    NeamRuntime* runtime,
    const char* name,
    const char* provider,
    const char* model,
    const char* system
);
/**
 * @brief Set agent temperature
 *
 * @param agent Agent handle
 * @param temperature Temperature value (0.0 to 2.0)
 */
NEAM_API void neam_agent_set_temperature(NeamAgent* agent, double temperature);
/**
 * @brief Set agent context from file or directory
 *
 * @param agent Agent handle
 * @param path Path to context file or directory
 * @return Zero on success, non-zero on error
 */
NEAM_API int neam_agent_set_context_from(NeamAgent* agent, const char* path);
/**
 * @brief Send a query to an agent
 *
 * @param agent Agent handle
 * @param query Query string
 * @return Response string (caller must free with neam_string_free)
 */
NEAM_API char* neam_agent_ask(NeamAgent* agent, const char* query);
/**
 * @brief Add a handoff target to an agent
 *
 * @param agent Source agent
 * @param target_name Target agent name
 * @param tool_name Tool name for handoff (or NULL for default)
 * @param description Handoff description
 * @return Zero on success
 */
NEAM_API int neam_agent_add_handoff(
    NeamAgent* agent,
    const char* target_name,
    const char* tool_name,
    const char* description
);
/**
 * @brief Reset agent conversation history
 * @param agent Agent handle
 */
NEAM_API void neam_agent_reset(NeamAgent* agent);
/**
 * @brief Free an agent
 * @param agent Agent to free (may be NULL)
 */
NEAM_API void neam_agent_free(NeamAgent* agent);
/* ============================================================================
 * Runner API (Agent Loop)
 * ============================================================================ */

/**
 * @brief Create a runner for agent loop execution
 *
 * @param runtime Runtime context
 * @param entry_agent Entry agent name
 * @param max_turns Maximum turns before stopping
 * @return Runner handle (caller takes ownership)
 */
NEAM_API NeamRunner* neam_runner_create(
    NeamRuntime* runtime,
    const char* entry_agent,
    int max_turns
);
/**
 * @brief Enable or disable tracing for a runner
 *
 * @param runner Runner handle
 * @param enabled Non-zero to enable
 */
NEAM_API void neam_runner_enable_tracing(NeamRunner* runner, int enabled);
/**
 * @brief Run the agent loop
 *
 * @param runner Runner handle
 * @param input Input string
 * @return Execution result (caller takes ownership)
 */
NEAM_API NeamResult* neam_runner_run(NeamRunner* runner, const char* input);
/**
 * @brief Get the final agent name after a run
 *
 * @param runner Runner handle
 * @return Agent name (owned by runner)
 */
NEAM_API const char* neam_runner_final_agent(NeamRunner* runner);
/**
 * @brief Get total turns used in last run
 *
 * @param runner Runner handle
 * @return Number of turns
 */
NEAM_API int neam_runner_total_turns(NeamRunner* runner);
/**
 * @brief Free a runner
 * @param runner Runner to free (may be NULL)
 */
NEAM_API void neam_runner_free(NeamRunner* runner);
/* ============================================================================
 * Task API (A2A Protocol)
 * ============================================================================ */

/**
 * @brief Create a new task
 *
 * @param runtime Runtime context
 * @param agent_name Target agent name
 * @param input_json Input as JSON string
 * @return Task handle (caller takes ownership)
 */
NEAM_API NeamTask* neam_task_create(
    NeamRuntime* runtime,
    const char* agent_name,
    const char* input_json
);
/**
 * @brief Get task ID
 *
 * @param task Task handle
 * @return Task ID string (owned by task)
 */
NEAM_API const char* neam_task_id(NeamTask* task);
/**
 * @brief Submit a task for execution
 *
 * @param task Task handle
 * @return Zero on success
 */
NEAM_API int neam_task_submit(NeamTask* task);
/**
 * @brief Get task status
 *
 * @param task Task handle
 * @return Current status
 */
NEAM_API NeamTaskStatus neam_task_status(NeamTask* task);
/**
 * @brief Wait for task completion with timeout
 *
 * @param task Task handle
 * @param timeout_ms Timeout in milliseconds (-1 for infinite)
 * @return Zero if completed, non-zero if timeout or error
 */
NEAM_API int neam_task_wait(NeamTask* task, int timeout_ms);
/**
 * @brief Get task result
 *
 * @param task Task handle
 * @return Result JSON string (caller must free with neam_string_free)
 */
NEAM_API char* neam_task_result(NeamTask* task);
/**
 * @brief Cancel a task
 *
 * @param task Task handle
 * @return Zero on success
 */
NEAM_API int neam_task_cancel(NeamTask* task);
/**
 * @brief Free a task
 * @param task Task to free (may be NULL)
 */
NEAM_API void neam_task_free(NeamTask* task);
/* ============================================================================
 * Agent Card API (A2A Protocol)
 * ============================================================================ */

/**
 * @brief Get agent card as JSON
 *
 * @param runtime Runtime context
 * @param agent_name Agent name
 * @return Agent card JSON (caller must free with neam_string_free)
 */
NEAM_API char* neam_get_agent_card(NeamRuntime* runtime, const char* agent_name);
/**
 * @brief Register an agent card from JSON
 *
 * @param runtime Runtime context
 * @param agent_name Agent name
 * @param card_json Agent card as JSON
 * @return Zero on success
 */
NEAM_API int neam_register_agent_card(
    NeamRuntime* runtime,
    const char* agent_name,
    const char* card_json
);
/* ============================================================================
 * Error Handling
 * ============================================================================ */

/**
 * @brief Get the last error from a runtime
 *
 * @param runtime Runtime context
 * @return Error handle (owned by runtime), or NULL if no error
 */
NEAM_API NeamError* neam_get_last_error(NeamRuntime* runtime);
/**
 * @brief Get error type
 *
 * @param error Error handle
 * @return Error type
 */
NEAM_API NeamErrorType neam_error_type(NeamError* error);
/**
 * @brief Get error message
 *
 * @param error Error handle
 * @return Error message (owned by error)
 */
NEAM_API const char* neam_error_message(NeamError* error);
/**
 * @brief Get error source line
 *
 * @param error Error handle
 * @return Line number, or -1 if unavailable
 */
NEAM_API int neam_error_line(NeamError* error);
/**
 * @brief Get error source column
 *
 * @param error Error handle
 * @return Column number, or -1 if unavailable
 */
NEAM_API int neam_error_column(NeamError* error);
/**
 * @brief Get error stack trace
 *
 * @param error Error handle
 * @return Stack trace string (owned by error)
 */
NEAM_API const char* neam_error_stack_trace(NeamError* error);
/**
 * @brief Convert error to JSON
 *
 * @param error Error handle
 * @return JSON string (caller must free with neam_string_free)
 */
NEAM_API char* neam_error_to_json(NeamError* error);
/**
 * @brief Clear the last error
 *
 * @param runtime Runtime context
 */
NEAM_API void neam_clear_error(NeamRuntime* runtime);
/* ============================================================================
 * Memory Management Helpers
 * ============================================================================ */

/**
 * @brief Pause garbage collection
 *
 * Use this when holding Neam values in host code to prevent them from
 * being collected. Must be balanced with neam_gc_resume().
 *
 * @param runtime Runtime context
 */
NEAM_API void neam_gc_pause(NeamRuntime* runtime);
/**
 * @brief Resume garbage collection
 *
 * @param runtime Runtime context
 */
NEAM_API void neam_gc_resume(NeamRuntime* runtime);
/**
 * @brief Force a garbage collection cycle
 *
 * @param runtime Runtime context
 */
NEAM_API void neam_gc_collect(NeamRuntime* runtime);