bindings/python/neam/__init__.py


# Agent API
_lib.neam_agent_create.restype = ctypes.POINTER(_NeamAgent)
_lib.neam_agent_create.argtypes = [
    ctypes.POINTER(_NeamRuntime),
    ctypes.c_char_p,
    ctypes.c_char_p,
    ctypes.c_char_p,
    ctypes.c_char_p
]
_lib.neam_agent_set_temperature.restype = None
_lib.neam_agent_set_temperature.argtypes = [ctypes.POINTER(_NeamAgent), ctypes.c_double]
_lib.neam_agent_set_context_from.restype = ctypes.c_int
_lib.neam_agent_set_context_from.argtypes = [ctypes.POINTER(_NeamAgent), ctypes.c_char_p]
_lib.neam_agent_ask.restype = ctypes.c_char_p
_lib.neam_agent_ask.argtypes = [ctypes.POINTER(_NeamAgent), ctypes.c_char_p]
_lib.neam_agent_add_handoff.restype = ctypes.c_int
_lib.neam_agent_add_handoff.argtypes = [
    ctypes.POINTER(_NeamAgent),
    ctypes.c_char_p,
    ctypes.c_char_p,
    ctypes.c_char_p
]
_lib.neam_agent_reset.restype = None
_lib.neam_agent_reset.argtypes = [ctypes.POINTER(_NeamAgent)]
_lib.neam_agent_free.restype = None
_lib.neam_agent_free.argtypes = [ctypes.POINTER(_NeamAgent)]

# Runner API
_lib.neam_runner_create.restype = ctypes.POINTER(_NeamRunner)
_lib.neam_runner_create.argtypes = [ctypes.POINTER(_NeamRuntime), ctypes.c_char_p, ctypes.c_int]
_lib.neam_runner_enable_tracing.restype = None
_lib.neam_runner_enable_tracing.argtypes = [ctypes.POINTER(_NeamRunner), ctypes.c_int]
_lib.neam_runner_run.restype = ctypes.POINTER(_NeamResult)
_lib.neam_runner_run.argtypes = [ctypes.POINTER(_NeamRunner), ctypes.c_char_p]
_lib.neam_runner_final_agent.restype = ctypes.c_char_p
_lib.neam_runner_final_agent.argtypes = [ctypes.POINTER(_NeamRunner)]
_lib.neam_runner_total_turns.restype = ctypes.c_int
_lib.neam_runner_total_turns.argtypes = [ctypes.POINTER(_NeamRunner)]
_lib.neam_runner_free.restype = None
_lib.neam_runner_free.argtypes = [ctypes.POINTER(_NeamRunner)]

# Task API
_lib.neam_task_create.restype = ctypes.POINTER(_NeamTask)
_lib.neam_task_create.argtypes = [ctypes.POINTER(_NeamRuntime), ctypes.c_char_p, ctypes.c_char_p]
_lib.neam_task_id.restype = ctypes.c_char_p
_lib.neam_task_id.argtypes = [ctypes.POINTER(_NeamTask)]
_lib.neam_task_submit.restype = ctypes.c_int
_lib.neam_task_submit.argtypes = [ctypes.POINTER(_NeamTask)]
_lib.neam_task_status.restype = ctypes.c_int
_lib.neam_task_status.argtypes = [ctypes.POINTER(_NeamTask)]
_lib.neam_task_wait.restype = ctypes.c_int
_lib.neam_task_wait.argtypes = [ctypes.POINTER(_NeamTask), ctypes.c_int]
_lib.neam_task_result.restype = ctypes.c_char_p
_lib.neam_task_result.argtypes = [ctypes.POINTER(_NeamTask)]
_lib.neam_task_cancel.restype = ctypes.c_int
_lib.neam_task_cancel.argtypes = [ctypes.POINTER(_NeamTask)]
_lib.neam_task_free.restype = None
_lib.neam_task_free.argtypes = [ctypes.POINTER(_NeamTask)]

# Agent Card API
_lib.neam_get_agent_card.restype = ctypes.c_char_p
_lib.neam_get_agent_card.argtypes = [ctypes.POINTER(_NeamRuntime), ctypes.c_char_p]
_lib.neam_register_agent_card.restype = ctypes.c_int
_lib.neam_register_agent_card.argtypes = [ctypes.POINTER(_NeamRuntime), ctypes.c_char_p, ctypes.c_char_p]

# Error handling
_lib.neam_get_last_error.restype = ctypes.POINTER(_NeamError)
_lib.neam_get_last_error.argtypes = [ctypes.POINTER(_NeamRuntime)]
_lib.neam_error_type.restype = ctypes.c_int
_lib.neam_error_type.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_error_message.restype = ctypes.c_char_p
_lib.neam_error_message.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_error_line.restype = ctypes.c_int
_lib.neam_error_line.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_error_column.restype = ctypes.c_int
_lib.neam_error_column.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_error_stack_trace.restype = ctypes.c_char_p
_lib.neam_error_stack_trace.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_error_to_json.restype = ctypes.c_char_p
_lib.neam_error_to_json.argtypes = [ctypes.POINTER(_NeamError)]
_lib.neam_clear_error.restype = None
_lib.neam_clear_error.argtypes = [ctypes.POINTER(_NeamRuntime)]

# GC functions
_lib.neam_gc_pause.restype = None
_lib.neam_gc_pause.argtypes = [ctypes.POINTER(_NeamRuntime)]
_lib.neam_gc_resume.restype = None
_lib.neam_gc_resume.argtypes = [ctypes.POINTER(_NeamRuntime)]
_lib.neam_gc_collect.restype = None
_lib.neam_gc_collect.argtypes = [ctypes.POINTER(_NeamRuntime)]


# ============================================================================
# Helper Functions
# ============================================================================

def _encode(s: Optional[str]) -> Optional[bytes]:
    """Encode a string to bytes for C API."""
    if s is None:
        return None
    return s.encode("utf-8")


def _decode(b: Optional[bytes]) -> Optional[str]:
    """Decode bytes from C API to string."""
    if b is None:
        return None
    return b.decode("utf-8")


# ============================================================================
# Version Functions
# ============================================================================

def version() -> str:
    """Get the Neam runtime version string."""
    return _decode(_lib.neam_version()) or "unknown"


def version_major() -> int:
    """Get the major version number."""
    return _lib.neam_version_major()


def version_minor() -> int:
    """Get the minor version number."""
    return _lib.neam_version_minor()


def version_patch() -> int:
    """Get the patch version number."""
    return _lib.neam_version_patch()


# ============================================================================
# Import submodules
# ============================================================================

from .runtime import Runtime
from .agent import Agent
from .runner import Runner
from .tools import tool
